
WARNING 
 if MAXNODELDM > MAXNODEDM
   then switch the size of ..._sc .._pc and pare_tr

Library note:
 SVRGP on IMSL

term
 proc ... to indicate each process

### update log ###

22/04/2013
MHD stub1D test requires comment out vyij=vzij=0 and dvy=dvz=0

matching with pv34.6.10
- use NSTHLIM and p<peffp for star formation criteria

matching with pv34.6.7

- Hopkins et al. SF criteria + NSTHLIM
- stime.F, ltime.F no check for dtmin in stime.F (in case of -10<SI_flagrad<-1
- calc_dv_du.F  /GAM for peff
- output.F output arot_v_p
- set_value.F and set_valuedm.F update

*** difference from pv34.6.2

18/03/2012
treef.F95 and dmtreef.F95  -> pv34.6.7
 set flago=3 if the impoted node np_tr=1
 adding .and.proc_dmtr(nd).eq.myrank) then and etc.

dmtree.F95 ldmtree.F95
 - no pn_nfp, but set pn_dmtr 0 or SI_ndm1
forcont.F95
  - in pdval*.dat not output nagravg
### FORTRAN 2003 version: ver. f03.0 copy from pv34.6.2 

27/01/2012
starfd.F
        do i=1,NYEL+1
          tdvr(i)=0.0d0
        enddo
->
        do i=0,NYEL
          tdvr(i)=0.0d0
        enddo



tree.F, dmtree.F, ldmtree.F  ... for np is very few or 0

 set level=0 at the beginning.

 set cmx and etc. and also cx,cy,cz,l for 0 after adjust cx,cz for node 1 and etc.

 if np=0 goto 94

   94 nodese_tr=1      
      if(nprocs.gt.1) then
        numtr0=num_tr
        numtrs=0
        nodess=1
 instead of 0

c *** list(0)=1=numtr0 ***
        i=0
        do i=0,level-2

   93   if(num_tr.eq.0) then
          numtrs=0
          nodess=0
          nodese_tr=0
        else if(nodess.gt.nodese_tr) then
          write(6,*) ' Error in buildtree(): nodess > nodese'
          write(6,*) ' nodess,nodese=',nodess,nodese_tr
          write(6,*) ' rank=',myrank,' np,numgtr=',np,num_tr
          stop
        else
          numtrs=nodese_tr-nodess+1
        endif

  when merge
            if(nrnd.gt.0) then
              noders=tivr(nrnd*3)
              nodere=tivr(nrnd*4-1)
            else
              noders=num_tr