@@ -926,6 +926,19 @@ subroutine allocate_mhd(np)
 
 end subroutine
 
-
 #endif
 
+! For PM
+
+#ifdef TREEPM
+subroutine allocate_pm()
+      use gcdp_pm
+      implicit none
+
+      allocate(x_m(0:nx_m-1,0:ny_m-1,0:nz_m-1))
+      allocate(y_m(0:nx_m-1,0:ny_m-1,0:nz_m-1))
+      allocate(z_m(0:nx_m-1,0:ny_m-1,0:nz_m-1))
+      allocate(rho_m(0:nx_m-1,0:ny_m-1,0:nz_m-1))
+
+end subroutine
+#endif
